--- a/resources/styles/chrome.css
+++ b/resources/styles/chrome.css
@@ -24,6 +24,7 @@ input[type='submit'] {
   margin-bottom: 0px;
   min-width: 4em;
   padding: 3px 12px 3px 12px;
+  border-radius: 2px;
 }
 
 button:hover,
@@ -57,26 +58,26 @@ input[type='submit'][disabled]:hover {
 
 select:hover {
 box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-background-image: url("select.png"), -moz-linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
+background-image: url(chrome://fxchromemods/content/resources/styles/select.png), -moz-linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
 color: #333;
 }
 
 select:active {
 box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
-background-image: url("select.png"), -moz-linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
+background-image: url(chrome://fxchromemods/content/resources/styles/select.png), -moz-linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
 color: #444;
 }
 
 
 select {
 /*box-flex: 1;*/
--moz-appearance: button;
+-moz-appearance: none;
 border-radius: 2px;
 box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 -moz-padding-end: 20px;
 -moz-padding-start: 2px;
 -moz-user-select: none;
-background-image: url("select.png"), -moz-linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
+background-image: url(chrome://fxchromemods/content/resources/styles/select.png), -moz-linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
 background-position: center right;
 background-repeat: no-repeat;
 border: 1px solid #AAA;
@@ -122,6 +123,6 @@ color: #888;
 
 select:disabled {
 color: graytext;
-background-image: url("select_disabled.png"), -moz-linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
+background-image: url(chrome://fxchromemods/content/resources/styles/select_disabled.png), -moz-linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
 
 }
