--- a/resources/styles/cp.css
+++ b/resources/styles/cp.css
@@ -141,6 +141,19 @@
     /*display: -moz-box;*/
 }
 
+#Options_Update {
+	float: left;
+}
+
+#update_loading {
+	 float:left;
+	 position:relative;
+	 top:5px;
+	 left:5px;
+	 opacity: 0;
+	 transition: opacity 200ms;
+}
+
 #ButtonStrip {
     /*display: -moz-box;*/
     /*-moz-box-orient: horizontal;*/
